--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     --shadow: 1px 1px 2px rgba(0,0,0,.1);
 }
 
+*{
+    box-sizing: border-box;
+}
+
 html, body{
     width: 100%;
     padding: 0;
@@ -11,11 +15,12 @@ html, body{
 
 html{
     height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body{
     min-height: 100%;
+    background-color: #f8f9fa;
 }
 
 a, button{
@@ -91,8 +96,10 @@ a, button, input{
 }
 
 #Sidebar {
-    background: #fbfbfb;
-    padding: 20px;
+    background-color: #fff;
+    padding: 20px 20px 15px 20px;
+    margin: 0 0 25px 20px;
+    border: 1px solid #ededed;
 }
 
 body:not(.logged) #UserPanel{
@@ -105,10 +112,23 @@ body:not(.logged) #UserPanel{
     padding: 10px;
 }
 
-#Filters .filter label {
-    font-size: 14px;
+#Filters .filter:not(.active) .filter-content{
+    display: none;
+}
+
+#Filters .filter.active .filter-content{
     display: block;
-    margin-bottom: 5px;
+    margin: 10px 0;
+}
+
+#Filters .filter label {
+    font-size: 12px;
+    display: block;
+    margin: 0;
+    letter-spacing: 1px;
+    border-bottom: 1px solid #ddd;
+    color: #666;
+    padding: 10px 0;
 }
 
 #Filters .filter select, #Filters .filter input {
@@ -128,6 +148,8 @@ body:not(.logged) #UserPanel{
 
 #SortAuctions {
     margin: 10px 0;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
 
 #SortAuctions .column {
@@ -135,21 +157,23 @@ body:not(.logged) #UserPanel{
     cursor: pointer;
     font-size: 12px;
     color: #666;
+    font-weight: 600;
+    text-align: center;
 }
 
-#SortAuctions .column.active-sort.asc:after{
+#SortAuctions .column:not(:last-of-type), #Auctions .column{
+    border-right: 1px solid rgba(0,0,0,.08);
+}
+
+#SortAuctions .column.active-sort.asc span:after{
     content: url('sort-asc.svg');
 }
 
-#SortAuctions .column.active-sort.desc:after{
+#SortAuctions .column.active-sort.desc span:after{
     content: url('sort-desc.svg');
 }
-#SortAuctions .column.active-sort{
-    font-weight: bold;
-    color: #000;
-}
 
-#SortAuctions .column.active-sort:after{
+#SortAuctions .column.active-sort span:after{
     position: absolute;
     width: 12px;
     height: 12px;
@@ -157,36 +181,40 @@ body:not(.logged) #UserPanel{
     top: 8px;
 }
 
+#SortAuctions .column.active-sort{
+    background: #f3f3f3;
+}
+
 #SortAuctions, #Auctions .row {
     display: grid;
-    grid-template-columns: 80px 200px 100px 150px 120px 60px 70px 120px 90px 70px 90px 60px;
+    grid-template-columns: 7% 12% 8% 14% 8% 6% 7% 9% 6% 7% 9% 7%;
     justify-content: space-between;
-    align-items: start;
+    align-items: center;
+    background-color: #fff;
 }
 
 #Auctions{
-    font-size: 14px;
+    font-size: 13px;
 }
 
 #Auctions .row{
     transition: background-color 0.3s ease-in-out;
+    margin-bottom: 6px;
+    border: 1px solid #eee;
+    border-radius: 2px;
 }
 
-#Auctions .row:nth-of-type(even){
-    background-color: #fafafa;
-}
-
-#Auctions .row:hover{
-    background-color: #f0f0f0;
+#Auctions .column{
+    display: grid;
+    align-items: center;
 }
 
 #SortAuctions .column, #Auctions .column{
     padding: 8px 4px;
     text-align: center;
-    align-self: start;
-    justify-self: start;
     position: relative;
     width: 100%;
+    height: 100%;
 }
 
 #SortAuctions .column sup, #Auctions .column sup{
