--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a, button, input{
 }
 
 #SearchObserve button {
-    border: none;
+    border: 1px solid #bbb;
     border-radius: 3px;
     padding: 10px 60px 10px 10px;
     cursor: pointer;
@@ -83,6 +83,7 @@ a, button, input{
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: right 10px center;
+    background-color: #ddd;
 }
 
 #SearchObserve button.observed {
@@ -121,7 +122,14 @@ body:not(.logged) #UserPanel{
     margin: 10px 0;
 }
 
-#Filters .filter label {
+#Filters .filter .filter-content label{
+    cursor: pointer;
+    width: 100%;
+    display: block;
+    margin-bottom: 5px;
+}
+
+#Filters .filter > label {
     font-size: 12px;
     display: block;
     margin: 0;
@@ -129,12 +137,24 @@ body:not(.logged) #UserPanel{
     border-bottom: 1px solid #ddd;
     color: #666;
     padding: 10px 0;
+    cursor: pointer;
 }
 
-#Filters .filter select, #Filters .filter input {
+#Filters .filter .heading {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+#Filters .filter select, #Filters .filter input{
     width: 100%;
     padding: 5px;
-    box-sizing: border-box;
+    cursor: pointer;
+}
+
+#Filters .filter input[type="checkbox"] {
+    width: auto !important;
+    float: right;
 }
 
 #Filters .filter input[type="date"], #Filters .filter input[type="number"]{
@@ -268,7 +288,7 @@ body:not(.logged) #UserPanel{
     width: calc(60vw - 80px);
     height: calc(60vh - 80px);
     z-index: 999;
-    background: rgba(255,255,255,.96);
+    background: #fff;
     transform: translate(-50%, -50%);
     padding: 40px;
     box-shadow: 2px 2px 5px 2px rgba(0,0,0,.3);
