--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ input[type="number"], input[type="date"]{
 
 #SortAuctions, #Auctions .row {
     display: grid;
-    grid-template-columns: 7% 12% 8% 14% 8% 6% 7% 9% 6% 7% 9% 7%;
+    grid-template-columns: 4% 6% 8% 6% 13% 7% 5% 6% 5% 8% 10% 8% 6% 8%;
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
@@ -347,7 +347,7 @@ footer {
     margin: 0 auto;
 }
 
-form{
+.login form{
     background-color: #fff;
     box-shadow: 0 3px 3px rgba(0,0,0,.075);
     border: 1px solid rgba(0,0,0,.125);
