change json db and add generating/dynamic changing on filters

--- a/style.css
+++ b/style.css
@@ -156,6 +156,14 @@ body:not(.logged) #UserPanel{
     cursor: pointer;
 }
 
+#FilterInspectorate .filter-group.hidden label:nth-child(n+7) {
+    display: none;
+}
+
+#FilterInspectorate .filter-group button{
+    float: right;
+}
+
 #Filters .filter .heading {
     font-weight: bold;
     padding-left: 0;
