--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body:not(.logged) #UserPanel{
     width: 12px;
     height: 12px;
     float: right;
+    margin-top: 3px;
 }
 
 #Filters .filter:not(.open) > label:after{
@@ -120,6 +121,7 @@ body:not(.logged) #UserPanel{
 #Filters .filter .filter-content{
     display: none;
     margin-top: 15px;
+    background: #00000003;
 }
 
 #Filters .filter .filter-content label{
@@ -150,9 +152,11 @@ body:not(.logged) #UserPanel{
     margin: 0;
     letter-spacing: 1px;
     border-bottom: 1px solid #ddd;
-    color: #666;
-    padding: 10px 0;
+    color: #000;
+    padding: 4px 5px;
     cursor: pointer;
+    background: #d4d4d4;
+    text-transform: uppercase;
 }
 
 .filter-group{
@@ -205,7 +209,7 @@ input[type="checkbox"] + span{
 
 .numbers input[type="text"], input[type="number"], input[type="date"]{
     margin: 5px 0;
-    height: calc(2.55rem + 2px);
+    height: calc(1.55rem + 2px);
 }
 
 .numbers label span, .dates label span{
@@ -251,7 +255,8 @@ input[type="checkbox"] + span{
     position: relative;
     cursor: pointer;
     font-size: 12px;
-    color: #666;
+    color: #000;
+    background-color: #cfcfcf;
     font-weight: 600;
     text-align: center;
 }
@@ -282,14 +287,14 @@ input[type="checkbox"] + span{
 
 #SortAuctions, #Auctions .row {
     display: grid;
-    grid-template-columns: 50px 80px 128px 90px 200px 105px 80px 100px 80px 125px 155px 120px 90px 120px;
+    grid-template-columns: 50px 110px 215px 90px 135px 135px 80px 85px 100px 100px 130px 120px 90px 120px;
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
 }
 
 #Auctions{
-    font-size: 12px;
+    font-size: 11px;
 }
 
 #Auctions .row{
@@ -300,7 +305,7 @@ input[type="checkbox"] + span{
 }
 
 #Auctions .row:hover{
-    background-color: #fafafa;
+    background-color: #e9e9e97a;
 }
 
 #Auctions .column{
@@ -309,7 +314,7 @@ input[type="checkbox"] + span{
 }
 
 #SortAuctions .column, #Auctions .column{
-    padding: 12px 4px;
+    padding: 4px 4px;
     text-align: center;
     position: relative;
     width: 100%;
@@ -322,8 +327,8 @@ input[type="checkbox"] + span{
 }
 
 #Auctions button.observe {
-    width: 20px;
-    height: 20px;
+    width: 28px;
+    height: 36px;
     align-self: center;
     justify-self: center;
     background-color: transparent;
@@ -376,22 +381,23 @@ input[type="checkbox"] + span{
 #Popup {
     position: fixed;
     top: 100px;
-    width: calc(60vw - 80px);
-    left: 50%;
+    width: calc(35vw - 80px);
+    left: 74%;
     min-height: auto;
     z-index: 999;
     background: #fff;
     transform: translateX(-50%);
-    padding: 40px;
+    padding: 20px;
     box-shadow: 2px 2px 5px 2px rgba(0,0,0,.3);
+    font-size: 12px;
 }
 
-#Popup button{
+#Popup button {
     position: absolute;
     top: 10px;
     right: 10px;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     background-color: transparent;
     background-image: url(exit-icon.svg);
     background-position: center;
