--- a/style.css
+++ b/style.css
@@ -286,7 +286,20 @@ input[type="checkbox"] + span{
     margin-bottom: 10px;
 }
 
-#SaveSearch.observed {
+#SaveSearchContainer {
+    background: #fff;
+    padding: 5px 10px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    border: 1px solid #ededed;
+}
+
+#SaveSearchContainer h4{
+    margin: 0;
+    color: #666;
+}
+
+#SaveSearchContainer.observed #SaveSearch {
     border: 1px solid #aaa;
     border-radius: 3px;
     padding: 10px 60px 10px 10px;
@@ -294,6 +307,38 @@ input[type="checkbox"] + span{
     text-transform: uppercase;
     font-weight: bold;
     background-image: url(star.svg);
+    float: right;
+}
+
+#SaveSearchContainer:not(.observed) h4, #SaveSearchContainer:not(.observed) #SaveSearchName{
+    display: none;
+}
+
+#SaveSearchName {
+    display: inline-block;
+}
+
+#EditSearchName, #SaveEditSearchName{
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 16px;
+    height: 16px;
+    margin-left: 20px;
+}
+
+#EditSearchName{
+    background-image: url(edit-icon.svg);
+} 
+#SaveEditSearchName{
+    background-image: url(check-icon.svg);
+}
+
+#SaveSearchName span[contenteditable="false"] {
+    outline: none;
 }
 
 #SortAuctions {
